--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "electron-quick-start",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "A minimal Electron application",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "app": "electron-packager ./xin-desktop xin --platform=mas --app-version=0.0.1 --out=./app --overwrite",
+    "dmg": "electron-installer-dmg xin.app xin"
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
